kubernetes/clusters/live/config/immich/namespace.yaml
---
apiVersion: v1
kind: Namespace
metadata:
  name: immich
  labels:
    istio.io/dataplane-mode: ambient
    pod-security.kubernetes.io/enforce: baseline
    pod-security.kubernetes.io/audit: restricted
    pod-security.kubernetes.io/warn: restricted
    network-policy.homelab/profile: standard
    access.network-policy.homelab/postgres: "true"
    access.network-policy.homelab/dragonfly: "true"
