kubernetes/clusters/live/config/immich/external-route.yaml
---
# yaml-language-server: $schema=https://kubernetes-schemas.pages.dev/gateway.networking.k8s.io/httproute_v1.json
apiVersion: gateway.networking.k8s.io/v1
kind: HTTPRoute
metadata:
  name: immich-external
  namespace: immich
  annotations:
    gethomepage.dev/enabled: "true"
    gethomepage.dev/name: "Immich"
    gethomepage.dev/group: "Apps"
    gethomepage.dev/icon: "immich.svg"
    gethomepage.dev/pod-selector: "app.kubernetes.io/name=server"
spec:
  parentRefs:
    - name: external
      namespace: istio-gateway
  hostnames:
    - "photos.${external_domain}"
  rules:
    - backendRefs:
        - name: immich-server
          port: 2283
